Replaces commons collections with google guava